# homer-api

./: .gitignore  Makefile.am  README.md  configure.ac  homer-api.spec.in
api/: .htaccess  autoload.php  configuration.php  configuration_example.php  index.php  preferences_example.php
api/Authentication/: Authentication.php  External.php  Internal.php  LDAP.php
api/Database/: PDOConnector.php
api/Layer/: mysql.php  pgsql.php
api/RestApi/: Admin.php  Alarm.php  Auth.php  Dashboard.php  Profile.php  Report.php  Search.php  Statistic.php
api/RestService/: Client.php  Server.php
apidoc/: apidoc.json  doc.php
apidoc/html/: api_data.js  api_data.json  api_project.js  api_project.json
examples/dashboards/: _1426001444630.json
examples/mysql/: mysqld.service  sipcapture.cnf
examples/pgsql/: kamailio.cfg
examples/sipcapture/: kamailio.cfg  sipcapture.kamailio  sipcapture.kamailio.elastic  sipcapture.logrotated  sipcapture.opensips  sipcapture.rsyslogd  sipcapture.sysconfig
examples/web/: homer5.apache  homer5.nginx  homer5.php-fpm  httpd.pp.targeted  nginx.pp.targeted  nginx.te  php-fpm.pp.targeted  php-fpm.te  php.pp.targeted  sipcapture-dashboards.te
pkg/debian/: changelog  control  copyright  homer-api.cron.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
psql/: PDOConnector.php  Report.php  Search.php  Statistic.php  pgsql.php
scripts/: crontab  homer_mysql_new_table.pl  homer_mysql_remove_partitions.pl  homer_mysql_rotate.pl  homer_rotate  new_table.pl  partrotate_unixtimestamp.pl  rotate.sh  rotation.ini  sipcapture.crontab  sipcapture_configure
scripts/mysql/: homer_mysql_partremove  homer_mysql_remove_partitions.pl  homer_mysql_rotate  homer_mysql_rotate.pl  rotation.ini  rotation_kamailio5.ini  sipcapture.crontab
scripts/new/: rotation.ini  (+1 more)
sql/: homer_user_bootstrap.sql  new_table.pl  schema_capture.sql  schema_configuration.sql  schema_data.sql  schema_statistic.sql
(+27 files in other folders)
